# fetchit2019

./: LICENSE  README.md
caddy_manipulation/: CMakeLists.txt  README.md  moveit.rviz  package.xml
caddy_manipulation/config/: octomap.yaml  ompl_planning.yaml
caddy_manipulation/include/caddy_manipulation/: CaddyGrasping.h  CaddyPicking.h  MoveFetch.h  OctomapBuilder.h  Placing.h  PlacingCaddy.h  PlacingParts.h  SickCameraClient.h  move_group_util.h  prepare_manipulation.h
caddy_manipulation/launch/: fetch_moveit_sensor_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  sensor_manager.launch.xml
caddy_manipulation/src/: CaddyGrasping.cpp  CaddyPicking.cpp  Placing.cpp  PlacingCaddy.cpp  PlacingParts.cpp  SickCameraClient.cpp  move_group_util.cpp  prepare_manipulation.cpp
caddy_manipulation/src/test/: _get_pose.cpp  grasp_caddy_test.cpp  octomap_buider_test.cpp  place_caddy_test.cpp  place_parts_test.cpp  test_sick_camera_activate.cpp
chuck_detector/: CMakeLists.txt  README.md  chuck.rviz  package.xml
chuck_detector/include/chuck_detector/: ChuckDetector.h
chuck_detector/src/: ChuckDetector.cpp  test_chuck_detection.cpp
common_manipulation/: CMakeLists.txt  package.xml
common_manipulation/include/common_manipulation/: LargeGearCollisionObject.h
common_manipulation/src/: LargeGearCollisionObject.cpp  test_large_gear_collision.cpp
common_perception/: CMakeLists.txt  package.xml
common_perception/include/common_perception/: TableSegmentor.h  crop.h
common_perception/src/: TableSegmentor.cpp  crop.cpp
doc/: env_setup.md  real_robot.md
fetch_cpp/: CMakeLists.txt  README.md  package.xml
fetch_cpp/include/fetch_cpp/: FetchGripper.h  HeadClient.h  PointHeadClient.h  TorsoLiftClient.h
fetch_cpp/src/: FetchGripper.cpp  HeadClient.cpp  PointHeadClient.cpp  TorsoLiftClient.cpp
fetch_cpp/src/node/: raise_torso.cpp  test_gripper.cpp  test_head.cpp  test_point_head.cpp
gazebo/: README.md  assembly_spawn_simple_arena_montreal2019.launch
gear_detector/: CMakeLists.txt  README.md  package.xml  rviz.rviz
gear_detector/src/: gear_detector_node.cpp
insert_large_gear/: CMakeLists.txt  README.md  package.xml
insert_large_gear/include/insert_large_gear/: LargeGearInserting.h
insert_large_gear/src/: LargeGearInserting.cpp  effort_values.cpp  test_insertion.cpp
kit_detector/: CMakeLists.txt  README.md  kit_detector.rviz  package.xml
kit_detector/include/kit_detector/: Caddy.h  CaddyPoseEstimator.h  CaddyRotationParam.h  KitDetector.h  transformPointCloud.h
kit_detector/launch/: three_caddies.launch
kit_detector/src/: CaddyPoseEstimator.cpp  CaddyRotationParam.cpp  KitDetector.cpp  kit_detector_test.cpp  transformPointCloud.cpp
kit_detector/worlds/: three_caddies.world
main/: CMakeLists.txt  Makefile  README  TODO_ON_SETUP_DAY  package.xml
main/config/: .tmux.conf  competition.tmux.conf  fetchXXXX_sample.bashrc
main/launch/: competition.launch  test_course.launch
main/src/: Arena.h  ArenaNav.h  MapPose.h  NavOnlyArena.h  TestCourse.h  test_course_node.cpp  test_nav.cpp  test_prepare_arm.cpp
navigation/: CMakeLists.txt  README.md  package.xml
navigation/config/default/: amcl.yaml  costmap_common.yaml  navigation.rviz
navigation/config/default/fetch/: costmap_global.yaml  costmap_local.yaml  move_base.yaml
navigation/launch/: navigation.launch
navigation/launch/include/: amcl.launch.xml  move_base.launch.xml
navigation/maps/arena/: 2 (original).pgm  2.pgm  2.yaml  4-30 (original).pgm  4-30.pgm  4-30.yaml
navigation/maps/reza-lab/: 5-6 (original).pgm  5-6.pgm  5-6.yaml
schunk_door_detector/: CMakeLists.txt  package.xml
schunk_door_detector/include/schunk_door_detector/: HandleDetector.hpp  HandlePoseEstimator.h  transformPointCloud.h
schunk_door_detector/src/: HandleDetector.cpp  HandlePoseEstimator.cpp  schunk_door_detector_test.cpp  transformPointCloud.cpp
schunk_door_manip/: CMakeLists.txt  README.md  package.xml
schunk_door_manip/include/schunk_door_manip/: GrabHandle.h
schunk_door_manip/src/: GrabHandle.cpp  close_door.cpp  open_door.cpp
schunk_machine/: CMakeLists.txt  package.xml
schunk_machine/include/schunk_machine/: SchunkMachine.hpp
schunk_machine/python_version_by_Fetch/: close_schunk_machine.py  open_schunk_machine.py
schunk_machine/src/: SchunkMachine.cpp  test_schunk_machine_close.cpp  test_schunk_machine_open.cpp
sick_drop_off_detection/: CMakeLists.txt  package.xml
sick_drop_off_detection/include/sick_drop_off_detection/: SickDropOffDetector.h  SickDropOffPoseEstimator.h  transformPointCloud.h
sick_drop_off_detection/src/: SickDropOffDetector.cpp  SickDropOffPoseEstimator.cpp  test_drop_off_detection.cpp  transformPointCloud.cpp
uml_fetchit_bin_detection/: CMakeLists.txt  README  package.xml
uml_fetchit_bin_detection/include/: CaddyGrasping.h
uml_fetchit_bin_detection/src/: widget_detect_and_grab.cpp
